--- a/JavaScript/webshop/package.json
+++ b/JavaScript/webshop/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "express": "~4.10.1",
+    "gaikan": "~2.0.2",
+    "body-parser": "~1.9.2",
+    "cookie-parser": "~1.3.3",
+    "express-session": "~1.9.1",
+    "bcrypt-nodejs": "0.0.3"
+  }
 }
