--- a/JavaScript/webshop/package.json
+++ b/JavaScript/webshop/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.9.2",
     "cookie-parser": "~1.3.3",
     "express-session": "~1.9.1",
-    "bcrypt-nodejs": "0.0.3"
+    "bcrypt-nodejs": "0.0.3",
+    "node-uuid": "~1.4.1"
   }
 }
