--- a/javascript/webshop/package.json
+++ b/javascript/webshop/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.3.3",
     "express-session": "~1.9.1",
     "bcrypt-nodejs": "0.0.3",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "intravenous": "~0.1.4-beta"
   }
 }
